[metadata]
name = warpy
author = Arian Amiramjadi
author_email = me@arian.lol
license = GPL
description = A simple cli to get WARP+ as WireGuard configuration
long_description = file: README.md
keywords = warpy, warp+, warp-plus, warp wireguard
url = https://github.com/warp-plus/warpy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = warpy
install_requires = pynacl; requests

[options.entry_points]
console_scripts = warpy = warpy.__main__:main
